--- a/scss/abstracts/_utility.scss
+++ b/scss/abstracts/_utility.scss
@@ -2,3 +2,17 @@
 .no-line-break {
     white-space: nowrap;
 }
+
+//hides text/element but allows screen readers to read it, shows in search engines, etc
+.screen-reader {
+
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0,0,0,0);
+    white-space: nowrap;
+    border: 0;
+}
