--- a/scss/layout/_cases.scss
+++ b/scss/layout/_cases.scss
@@ -88,4 +88,12 @@
 .case-studies__pop-up-link--web{
     @extend %global__button;
     @include background-with-darken-on-hover(map-get($services-colours, 'bespoke software'));
+
+    i{ //targets arrow icon
+        font-size: 1rem;
+        margin-left: 0.1rem;
+        color: $white;
+    }
+
 }
+
