--- a/scss/layout/_form.scss
+++ b/scss/layout/_form.scss
@@ -14,6 +14,7 @@ padding: 3.125rem 0;
     display:flex;
     flex-direction:column;
     width: 100%;
+    margin-bottom: 1rem; 
 
     @include breakpoint(medium-to-wide) {
     flex-direction: row;
@@ -24,10 +25,12 @@ padding: 3.125rem 0;
 }
 
 .newletter-form__input-container {
+    display: flex; //
     margin-left: -15px;
-    margin-bottom: 1rem;
+    margin-bottom: 1rem; //1
     width: 300%;
     flex-grow: 1;
+    display: flex;
 }
 
 .newsletter-form__label {
@@ -61,7 +64,7 @@ padding: 3.125rem 0;
 }
 
 .newsletter-form__input--text {
-    display: flex;
+   //display: flex;
    // flex-grow:1
     width:100%; //or 100%
     height: 3rem;
@@ -119,7 +122,7 @@ padding: 3.125rem 0;
 
 .newsletter-form__input--checkbox:checked + newsletter-form__label::before {
     //when checkbox is checked
-    content: '✓';
+    content: 'o';
     display: flex;
     justify-content: center;
     align-items: center;
